@@ -5,6 +5,10 @@ IN DEVELOPMENT
     * Do not suppress pipe errors, etc. in non-display commands
       (Alexander Belchenko, #87178)
 
+    * Display a useful error message when the user requests to annotate
+      a file that is not present in the specified revision.
+      (James Westby, #122656)
+
   IMPROVEMENTS:
 
     * The --lsprof-file option now dumps a text rendering of the profiling
